--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/cors": "^2.8.9",
     "@types/express": "^4.17.10",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
